Background Image front / back always showing back #72154

Closed
opened 2019-12-04 03:13:58 +01:00 by Luciano Muñoz Sessarego · 8 comments

System Information
Operating system: Linux-3.10.0-693.21.1.el7.x86_64-x86_64-with-centos-7.4.1708-Core 64 Bits
Graphics card: Quadro M5000/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 396.54

Blender Version
Broken: version: 2.82 (sub 3), branch: master, commit date: 2019-12-03 17:56, hash: fda791ab12
Worked: (optional)

Short description of error
when you add a background image to the camera objects and greasepencil are always back no matter the options.

Exact steps for others to reproduce the error
create a new 2D or 3D scene,
drag and drop any image to the camera for it to become a background image.
under the camera properties, background image put the opacity to 100
change "back" or "front"
everything stays behind the background image.

hope it helps

**System Information** Operating system: Linux-3.10.0-693.21.1.el7.x86_64-x86_64-with-centos-7.4.1708-Core 64 Bits Graphics card: Quadro M5000/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 396.54 **Blender Version** Broken: version: 2.82 (sub 3), branch: master, commit date: 2019-12-03 17:56, hash: `fda791ab12` Worked: (optional) **Short description of error** when you add a background image to the camera objects and greasepencil are always back no matter the options. **Exact steps for others to reproduce the error** create a new 2D or 3D scene, drag and drop any image to the camera for it to become a background image. under the camera properties, background image put the opacity to 100 change "back" or "front" everything stays behind the background image. hope it helps
Author
Member

Added subscriber: @LucianoMunoz

Added subscriber: @LucianoMunoz
Member

Added subscriber: @Jeroen-Bakker

Added subscriber: @Jeroen-Bakker
Jeroen Bakker self-assigned this 2019-12-04 15:13:08 +01:00
Member

Seems like incorrect alpha blending.

Screenshot from 2019-12-04 15-12-20.png

Seems like incorrect alpha blending. ![Screenshot from 2019-12-04 15-12-20.png](https://archive.blender.org/developer/F8189387/Screenshot_from_2019-12-04_15-12-20.png)
Member

there are two things happening.
The images are rendered with no framebuffer attached. So the alpha under blending does not happen, the render. White color is blending in from the color uniform.

Seems like the premul of the output pixel isn't being applied.

there are two things happening. The images are rendered with no framebuffer attached. So the alpha under blending does not happen, the render. White color is blending in from the color uniform. Seems like the premul of the output pixel isn't being applied.
Author
Member

When i reported the bug what was happening was always the full image would stay on top of the scene covering it 100%
this seems slightly different.

When i reported the bug what was happening was always the full image would stay on top of the scene covering it 100% this seems slightly different.

This issue was referenced by 31c77326c9

This issue was referenced by 31c77326c9dbfc029df969ec4d85a0faccb91b10
Member

Set the alpha of the background image to 0.0 and you see that it has the same result as shown in the image above.

Set the alpha of the background image to 0.0 and you see that it has the same result as shown in the image above.
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#72154
No description provided.